# Neural-Core

./: .gitignore  CMakeLists.txt  LICENSE  readme.md
.github/workflows/: ci.yml
src/: CMakeLists.txt  DataSet.cpp  DataSet.h  EarlyStopping.cpp  EarlyStopping.h  MNISTLoader.cpp  MNISTLoader.h  NeuralNetwork.cpp  NeuralNetwork.h  Perceptron.cpp  Perceptron.h  main.cpp
src/Events/: EventManager.cpp  EventManager.h  InterfaceEventListener.h
src/Layers/: Dropout.cpp  Dropout.h  InterfaceLayer.h  WeightedLayer.cpp  WeightedLayer.h
src/Layers/Activations/: InterfaceActivationFunction.h  ReLU.cpp  ReLU.h  Sigmoid.cpp  Sigmoid.h  Tanh.cpp  Tanh.h
src/Layers/Initializers/: GlorotInitializer.cpp  GlorotInitializer.h  HeInitializer.cpp  HeInitializer.h  InterfaceInitializer.h  OneInitializer.cpp  OneInitializer.h
src/Layers/Regularization/: LassoRegression.cpp  LassoRegression.h  LassoRidgeRegression.h  Regularizer.cpp  Regularizer.h  RidgeRegression.cpp  RidgeRegression.h
src/Loss/: CrossEntropy.cpp  CrossEntropy.h  InterfaceLossFunction.h  MeanSquarredError.cpp  MeanSquarredError.h
src/MathUtils/: Matrix.cpp  Matrix.h  Vector.cpp  Vector.h
src/Metrics/: Accuracy.cpp  Accuracy.h  F1Score.cpp  F1Score.h  InterfaceMetric.h  R2.cpp  R2.h
src/NEAT/: Config.h  Connection.h  GeneticUtils.cpp  GeneticUtils.h  Genome.cpp  Genome.h  InnovationCounter.h  Node.h  Population.cpp  Population.h  SelfEvolvingNeuralNetwork.cpp  SelfEvolvingNeuralNetwork.h  Specie.cpp  Specie.h  TopologicalSort.cpp  TopologicalSort.h
src/Optimizers/: InterfaceOptimizer.h  OptimizerManager.cpp  OptimizerManager.h  OptimizerState.cpp  OptimizerState.h
src/Optimizers/Adam/: Adam.cpp  Adam.h  AdamState.cpp  AdamState.h
src/Optimizers/RMSProp/: RMSProp.cpp  RMSProp.h  RMSPropState.cpp  RMSPropState.h
src/Optimizers/SGD/: SGD.cpp  SGD.h  SGDState.cpp  SGDState.h
tests/: Accuracy-test.cpp  Adam-test.cpp  CMakeLists.txt  CrossEntropy-test.cpp  DataSet-test.cpp  Dropout-test.cpp  EarlyStopping-test.cpp  F1Score-test.cpp  Genome-test.cpp  GlorotInitializer-test.cpp  HeInitializer-test.cpp  LassoRegression-test.cpp  LassoRidgeRegression-test.cpp  Matrix-test.cpp  MeanSquarredError-test.cpp  OneInitializer-test.cpp  Perceptron-test.cpp  R2-test.cpp  RMSProp-test.cpp  ReLU-test.cpp  RidgeRegression-test.cpp  SGD-test.cpp  SaveLoad-test.cpp  Sigmoid-test.cpp  Tanh-test.cpp  Vector-test.cpp  WeightedLayer-test.cpp  main.cpp
